Atualização nos apêndices da Monografia
Atualização nos apêndices da Monografia

--- a/Monografia/Monografia_MDJVI_Dennis.tex
+++ b/Monografia/Monografia_MDJVI_Dennis.tex
@@ -360,6 +360,8 @@ Com a finalidade de auxiliar a atividade de pesquisa e desenvolvimento do Museu,
 
 O projeto original previa que toda edição no acervo deveria ser realizada utilizando um único computador ``Mãe'' e o arquivo do banco de dados atualizado transferido para o diretório no servidor de forma manual através de um CD. Além dessa forma de manutenção de dados não ser prática, após alguns anos ocorreu um problema no computador ``Mãe'' impossibilitando qualquer forma da equipe responsável fazer qualquer alteração necessária. Ainda mais recentemente, devido a falta de suporte da equipe de informática da faculdade e fragilidades existentes em utilizar um sistema obsoleto, o site com a pesquisa do acervo teve que ser removido.
 
+O apêndice A contém o arquivo com a descrição do projeto original.
+
 \vspace{10pt}
 $\!$\\
 \textbf{Objetivo}
